--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,5 +73,12 @@
 
     <string name="err_old_pass">Old password is blank</string>
     <string name="err_new_passs">New password is blank</string>
-    <string name="err_confirm">COnfirm new password is blank</string>
+    <string name="err_confirm">Confirm new password is blank</string>
+    <!--Otp Validation-->
+    <string name="err_otp">Please enter one-time code</string>
+    <string name="err_invalid_itp">The one-time code you have entered in invalid</string>
+    <string name="err_otp_icnorrent">The one-time code you have entered is in-correct</string>
+    <string name="err_invalid_password">The password should contain at least 1 capital letter, 1 special character and 1
+        number.
+    </string>
 </resources>
