--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,8 @@
     <string name="err_invalid_password">The password should contain at least 1 capital letter, 1 special character and 1
         number.
     </string>
+
+    <string name="change_pwd"><u>Change Password</u>.</string>
+
+
 </resources>
